# Video-Seam-Fixer

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: chain_normalize.py  compare_viz.py  debug_viz.py  eval_boundaries.py  eval_chain.py  interp_experiment.py  vace_probe.py  wan_probe.py
tests/: test_io.py  test_metrics.py  test_window.py
vbf/: __init__.py  cli.py  config.py
vbf/data/: __init__.py  window.py
vbf/generate/: __init__.py  vace.py  wan.py
vbf/interp/: __init__.py  flow_interp.py  rife_interp.py
vbf/io/: __init__.py  video_io.py
vbf/logging/: __init__.py  run_logger.py
vbf/losses/: __init__.py  boundary_loss.py
vbf/metrics/: __init__.py  _seam.py  base.py  flicker.py  flow.py  perceptual.py  ratio.py
vbf/normalize/: __init__.py  chain.py
vbf/pipeline/: __init__.py  stitcher.py
vbf/refiners/: __init__.py  base.py  cascade.py  generative.py  gradient.py  warp.py
webapp/: README.md  server.py
webapp/static/: app.js  index.html  style.css
